--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.8",
+    "cloudinary": "^2.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
+    "multiparty": "^4.2.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
